changed title links

--- a/src/jade/includes/titlebar.jade
+++ b/src/jade/includes/titlebar.jade
@@ -2,8 +2,8 @@
 	.left.menu
 		a.item.redditmusicplayer.phone-hide(href='/')
 			span Music
-			|  Player 
-			span  for 
+			|  Player
+			span  for
 			| Reddit
 			sup  #{pkg.version}
 		.item.phone-only
@@ -19,18 +19,10 @@
 				.page.icon.link.item(data-page="remote", class={active: page == "remote"})
 					i.icon.wifi
 					| Remote Control
-				a.icon.item(href="https://github.com/musicplayer-io/redditmusicplayer", target="_blank")
+				a.icon.item(href="https://github.com/jake-g", target="_blank")
 					i.icon.github.alternative
 					| Source Code
-				a.icon.item(href="https://www.reddit.com/r/musicplayer", target="_blank")
-					i.icon.reddit
-					| Reddit
-				a.icon.item(href="https://twitter.com/musicplayer_io", target="_blank")
-					i.icon.twitter
-					| Twitter
-				a.icon.item(href="https://www.facebook.com/musicplayer.io", target="_blank")
-					i.icon.facebook
-					| Facebook
+
 		span.authentication
 			a.item.log-in(href="/login")
 				i.icon.user
