changed title links

--- a/src/jade/includes/titlebar.jade
+++ b/src/jade/includes/titlebar.jade
@@ -2,8 +2,8 @@
 	.left.menu
 		.item.redditmusicplayer
 			span Music
-			|  Player 
-			span  for 
+			|  Player
+			span  for
 			| Reddit
 			sup  #{pkg.version}
 	.right.menu
@@ -11,9 +11,9 @@
 			i.icon.sound
 		.page.icon.pop.link.item(data-page="remote", class={active: page == "remote"}, , data-content="Remote", data-variation="inverted")
 			i.icon.wifi
-		a.icon.pop.item(href="https://github.com/musicplayer-io/redditmusicplayer", data-content="Fork Me", target="_blank", data-variation="inverted")
+		a.icon.pop.item(href="https://github.com/jake-g", data-content="Fork Me", target="_blank", data-variation="inverted")
 			i.icon.github.alternative
-		a.icon.pop.item(href="http://www.musicplayer.io/donate.html", data-content="Donate", target="_blank", data-variation="inverted")
+		a.icon.pop.item(href="https://secure3.4agoodcause.com/project-cure/gift.aspx?id=1", data-content="Donate", target="_blank", data-variation="inverted")
 			i.icon.gift
 		span.authentication
 			a.item.log-in(href="/login")
